# scorm-scorcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/scorm_scorcher/: __init__.py  cli.py  quiz_generation.py  scorm_packager.py  video_processing.py
src/scorm_scorcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_quiz_generation.py  test_scorm_packager.py  test_video_processing.py
